--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                 <h2 class="about-me-section">Front-End Developer</h2>
                 <h1 class="my-name">Ponomarenko Oksana</h1>
-                <p class="about-me-description">I'am a motivated and detail-oriented front-end developer looking to be part <br> of a friendly and professional team where I can use and cultivate my development skills to achieve team results.</p>
+                <p class="about-me-description">I'm a motivated and detail-oriented front-end developer looking to be part <br> of a friendly and professional team where I can use and cultivate my development skills to achieve team results.</p>
             </div>
             <!-- My projects section -->
             <div class="my-projects-section">
@@ -37,10 +37,10 @@
                 <!-- Company 2 -->
                 <div class="my-work-experience-company-block">
                     <h4 class="my-work-experience-position">Front-End Developer<span class="my-work-experience-company"> Freelance </span></h4>
-                    <p class="my-work-experience-period">2019-2022 <span class="my-work-experience-divider"> | </span>  Kyiv</p>
+                    <p class="my-work-experience-period">2021-2022 <span class="my-work-experience-divider"> | </span>  Kyiv</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">
-                            Layout of adaptive site layouts (Landing Page, multipage sites) using HTML, CSS, JS, etc.
+                            The layout of adaptive site layouts (Landing Page, multipage sites) using HTML, CSS, JS, etc.
                         </li>
                         <li class="my-work-experience-duty">
                             Use of Flex, CSS Grid, BEM methodology, et al.
@@ -53,13 +53,13 @@
                 <!-- Company 1 -->
                 <div class="my-work-experience-company-block">
                     <h4 class="my-work-experience-position">UI/UX Designer <span class="my-work-experience-company">Freelance</span></h4>
-                    <p class="my-work-experience-period">2019-2022 <span class="my-work-experience-divider"> | </span>   Kyiv</p>
+                    <p class="my-work-experience-period">2019-2021 <span class="my-work-experience-divider"> | </span>   Kyiv</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">
-                            Creation of catalogs, banners for advertising on Facebook and Instagram, banners for the crypto community, website layouts. 
+                            Creation of catalogs, banners for advertising on Facebook and Instagram, banners for the crypto community, and website layouts. 
                         </li>
                         <li class="my-work-experience-duty">
-                            Using Figma, Photoshop, Illustrator, Tilda.
+                            Using Figma, Photoshop, Illustrator, and Tilda.
                         </li>
                         <li class="my-work-experience-duty">
                             Conversation with the customer. 
