--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main-content-section">
             <!-- About me section -->
             <div>
-                <h2 class="about-me-section">Front-End Developer</h2>
+                <h2 class="about-me-section">HTML Coder</h2>
                 <h1 class="my-name">Ponomarenko Oksana</h1>
                 <p class="about-me-description">I'm a motivated and detail-oriented front-end developer looking to be part <br> of a friendly and professional team where I can use and cultivate my development skills to achieve team results.</p>
             </div>
@@ -36,7 +36,7 @@
                 <h3 class="main-content-title">Work Experience</h3>
                 <!-- Company 2 -->
                 <div class="my-work-experience-company-block">
-                    <h4 class="my-work-experience-position">Front-End Developer<span class="my-work-experience-company"> Freelance </span></h4>
+                    <h4 class="my-work-experience-position">HTML Coder<span class="my-work-experience-company"> Freelance </span></h4>
                     <p class="my-work-experience-period">2021-2022 <span class="my-work-experience-divider"> | </span>  Kyiv</p>
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">
